Update for master:b386e354d: jQuery is now loaded *inside* the bookmarklet script

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ It allows you to choose a video object and then
 <p>How to use:</p>
 <ol>
   <li>Drag this button
-    <a class="button" href="javascript:(function(){function%20loadScript(a,b){var%20c=document.createElement('script');c.type='text/javascript';c.src=a;var%20d=document.getElementsByTagName('head')[0],done=false;c.onload=c.onreadystatechange=function(){if(!done&&(!this.readyState||this.readyState=='loaded'||this.readyState=='complete')){done=true;if(b!==undefined)b()}};d.appendChild(c)}loadScript('http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js',function(){loadScript('https://github.com/earshinov/vid/raw/master/vid.js')})})()">Vid</a>
+    <a class="button" href="javascript:(function(){function%20loadScript(a){var%20c=document.createElement('script');c.type='text/javascript';c.src=a;var%20d=document.getElementsByTagName('head')[0];d.appendChild(c)}loadScript('https://github.com/earshinov/vid/raw/master/vid.js')})()">Vid</a>
     to the bookmarks bar in your browser.  A new bookmark should appear.
   </li>
   <li>
