Discourage users from clicking a video object itself: it won't work

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@ It allows you to choose a video object and then
 </ol>
 <p>Notes:</p>
 <ul>
+  <li>
+    You should click a block around a video object, not the object itself.
+    The bookmarklet cannot catch a click event on an object.
+  </li>
   <li>When applying the bookmarklet, you may lose video position and already downloaded data.</li>
 </ul>
 <p>Tested in Firefox 3.6.</p>
-<p id="footer">This page was last modified at 2010-12-26.</p>
+<p id="footer">This page was last modified at 2011-01-03.</p>
