--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ It allows you to choose a video object and then
 <p>How to use:</p>
 <ol>
   <li>Drag this button
-    <a class="button" href="javascript:(function(){function%20loadScript(a){var%20c=document.createElement('script');c.type='text/javascript';c.src=a;var%20d=document.getElementsByTagName('head')[0];d.appendChild(c)}loadScript('https://github.com/earshinov/vid/raw/master/vid.js')})()">Vid</a>
+    <a class="button" href="javascript:(function(){function%20loadScript(a){var%20c=document.createElement('script');c.type='text/javascript';c.src=a;var%20d=document.getElementsByTagName('head')[0];d.appendChild(c)}loadScript('https://github.com/earshinov/vid/raw/master/vid.min.js')})()">Vid</a>
     to the bookmarks bar in your browser.  A new bookmark should appear.
   </li>
   <li>
