Update for changes in c54c7933

--- a/index.html
+++ b/index.html
@@ -55,29 +55,10 @@ A new bookmark should appear.
 </p>
 
 <p>
-On a page with a video activate the bookmarklet by clicking the bookmark and then:
+On a page with a video activate the bookmarklet by clicking the bookmark.
+When you hover cursor over a video object, the bookmarklet will highlight it with a yellow outline.
+Left-click the desired video object to extract it or cancel by pressing Esc.
 </p>
-<ol>
-  <li>
-    <p>
-    Hover cursor over a page block containing a video object.
-    Bookmarklet will
-    </p>
-    <ul>
-      <li>show a red outline around the block;</li>
-      <li>automatically locate the first object within the block and highlight it with yellow.</li>
-    </ul></li>
-  <li>
-    <p>
-    If the yellow-highlighted object is what you need, press Enter or left-click within the red-outlined block to confirm your choice
-    (<em>don't click the object itself as the bookmarklet cannot catch it</em>).
-    Otherwise, you can use your mouse/touchpad/etc. again to select a smaller page block containing just the video you want.
-    Alternatively, you can iterate objects within the red-onlined block using Space or Tab (hold Shift to reverse).
-    </p>
-  </li>
-</ol>
-
-<p>At any time, you can cancel by pressing Esc.</p>
 
 <p><em>Warning</em>: extraction may cause a loss of video position and already downloaded data.</p>
 
@@ -87,6 +68,6 @@ On a page with a video activate the bookmarklet by clicking the bookmark and the
 Tested in Firefox 3.6.
 If the bookmarket does not work in your browser, <a href="https://github.com/earshinov/vid/issues" target="_blank">write an issue</a>.</p>
 
-<p id="footer">This page was last modified at 2011-01-03.</p>
+<p id="footer">This page was last modified at 2011-01-08.</p>
 
 </div>
